objects/File_Archive_Association__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Statement_Date__c</fullName>
        <formula>File_Archive__r.Audit_Statement_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Certificate_No__c</fullName>
        <formula>Certificate_Name__r.CA_Owner_Certificate_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner/Certificate No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certificate Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>File Archive Associations</relationshipLabel>
        <relationshipName>File_Archive_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certificate_Type__c</fullName>
        <formula>Certificate_Name__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <formula>IF (INCLUDES (File_Archive__r.Document_Type__c , &quot;Standard Audit&quot; ), &quot;Standard Audit; &quot;, null) &amp; 
IF (INCLUDES (File_Archive__r.Document_Type__c, &quot;Code Signing Audit&quot; ), &quot;Code Signing Audit; &quot;, null) &amp;
IF (INCLUDES (File_Archive__r.Document_Type__c, &quot;BR Audit&quot; ), &quot;BR Audit; &quot;, null) &amp; 
IF (INCLUDES (File_Archive__r.Document_Type__c , &quot;EV SSL Audit&quot; ), &quot;EV SSL Audit; &quot;, null) &amp; 
IF (INCLUDES (File_Archive__r.Document_Type__c, &quot;EV Code Signing Audit&quot; ), &quot;EV Code Signing Audit; &quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Archive__c</fullName>
        <label>Archive ID</label>
        <referenceTo>File_Archive__c</referenceTo>
        <relationshipLabel>File Archive Associations</relationshipLabel>
        <relationshipName>File_Archive_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <formula>File_Archive__r.Period_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <formula>File_Archive__r.Period_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint__c</fullName>
        <formula>Certificate_Name__r.SHA_1_Fingerprint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-1 Fingerprint</label>
        <type>Text</type>
    </fields>
    <label>File Archive Association</label>
    <nameField>
        <displayFormat>AD{000000}</displayFormat>
        <label>Association ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Archive Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>